# LinkedIn-Post-Generator

./: .env.example  .gitignore  48_Mohammed_Saif_Mini_Project.pptx  README.md  few_shots.py  llm_helper.py  main.py  post_generator.py  preprocess.py  pyproject.toml
.streamlit/: config.toml
data/: new1.py  new2.py  processed_posts.json  raw_posts.json
linkedin_post_generator/: __init__.py  config.py  generator.py  llm.py  models.py  preprocess.py  quality.py  repository.py  ui.py  ui_presenters.py
linkedin_post_generator/scraper/: __init__.py  cleaning.py  dom.py  runner.py  session.py  voyager.py
tests/: test_generator.py  test_preprocess.py  test_quality.py  test_repository.py  test_scraper_cleaning.py  test_ui_presenters.py  test_wrappers.py
